# gt-ai-os-community

./: .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.arm64.yml  docker-compose.dev.yml  docker-compose.dgx.yml  docker-compose.x86-gpu.yml  docker-compose.x86.yml  docker-compose.yml  package-lock.json  package.json
apps/control-panel-backend/: Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test_email_template.py
apps/control-panel-backend/alembic/versions/: 005_add_user_tenant_assignments.py  006_add_tenant_templates.py  007_add_password_reset_rate_limits.py  008_add_totp_2fa.py  009_add_tfa_session_fields.py  010_add_system_management_tables.py
apps/control-panel-backend/app/: main.py
apps/control-panel-backend/app/api/: auth.py  public.py  resources.py  tenants.py  tenants_cbrest.py  tfa.py  users.py
apps/control-panel-backend/app/clients/: __init__.py  resource_cluster_client.py
apps/control-panel-backend/app/core/: api_standards.py  auth.py  config.py  database.py  email.py  tfa.py
apps/control-panel-backend/app/middleware/: __init__.py  session_validation.py
apps/control-panel-backend/app/models/: __init__.py  ai_resource.py  audit.py  model_config.py  resource_schemas.py  resource_usage.py  session.py  system.py  tenant.py  tenant_model_config.py  tenant_template.py  tfa_rate_limit.py  usage.py  used_temp_token.py  user.py  user_data.py  user_tenant_assignment.py  wiki_content.py
apps/control-panel-backend/app/schemas/: messages.py
apps/control-panel-backend/app/services/: __init__.py  api_key_service.py  backup_service.py  default_models.py  dremio_service.py  groq_service.py  message_bus.py  message_dmz.py  model_management_service.py  resource_allocation.py  resource_service.py  session_service.py  template_service.py  tenant_provisioning.py  update_service.py
apps/control-panel-backend/app/static/: README.md
apps/control-panel-backend/tests/: conftest.py  test_api_key_pure_unit.py  test_api_key_service.py  test_api_key_service_unit.py  test_auth.py  test_dremio_pure_unit.py  test_dremio_service.py  test_dremio_service_unit.py  test_fixtures.py  test_groq_service.py  test_license_service.py  test_models.py  test_resource_service.py  test_resources_api.py
apps/resource-cluster/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
apps/resource-cluster/app/: __init__.py  main.py
apps/resource-cluster/app/api/: __init__.py  agents.py  auth.py  embeddings.py  health.py  inference.py  internal.py  llm.py  rag.py  templates.py
apps/resource-cluster/app/clients/: __init__.py  api_key_client.py
apps/resource-cluster/app/core/: __init__.py  api_standards.py  capability_auth.py  config.py  exceptions.py  security.py
apps/resource-cluster/app/models/: __init__.py  access_group.py
apps/resource-cluster/app/providers/: __init__.py  external_provider.py
apps/resource-cluster/app/services/: __init__.py  admin_model_config_service.py  agent_orchestrator.py  config_sync.py  consul_registry.py  document_processing_pipeline.py  embedding_service.py  integration_proxy.py  llm_gateway.py  mcp_rag_server.py  mcp_sandbox.py  mcp_server.py  model_router.py  model_service.py  service_manager.py
apps/resource-cluster/app/utils/: __init__.py  encryption.py
apps/resource-cluster/tests/: __init__.py  conftest.py  test_consul_registry.py  test_document_processing.py  test_groq_proxy.py  test_integration_proxy.py  test_model_service.py  test_models_api.py
apps/tenant-backend/: .dockerignore  CHAT-ENDPOINT-DATA-ANALYSIS.md  Dockerfile  Dockerfile.dev  SECURITY-FIX-FINAL-SUMMARY.md  SECURITY-FIX-RESPONSE-FILTERING.md  SECURITY-REMEDIATION-COMPLETE.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/tenant-backend/app/: main.py
apps/tenant-backend/app/api/: __init__.py  auth.py  conversations.py  documents.py  embeddings.py  events.py  messages.py  websocket.py
apps/tenant-backend/app/core/: api_standards.py  asgi_router.py  cache.py  capability_client.py  config.py  database.py  database_interface.py  logging_config.py  path_security.py  permissions.py  postgresql_client.py  resource_client.py  response_filter.py  security.py  user_resolver.py
apps/tenant-backend/app/middleware/: __init__.py  oauth2_auth.py  rate_limiting.py  security.py  session_validation.py  tenant_isolation.py
apps/tenant-backend/app/models/: __init__.py  access_group.py  agent.py  agent_original.py  assistant_dataset.py  assistant_template.py  base.py  category.py  collaboration_team.py  conversation.py  document.py  event.py  external_service.py  game.py  message.py  team.py  user_session.py  workflow.py
apps/tenant-backend/app/schemas/: agent.py  category.py  conversation.py  document.py  event.py  user.py
apps/tenant-backend/app/services/: __init__.py  access_controller.py  agent_orchestrator_client.py  agent_service.py  assistant_builder.py  assistant_manager.py  automation_executor.py  category_service.py  conversation_file_service.py  conversation_service.py  conversation_summarizer.py  dataset_service.py  dataset_sharing.py  dataset_summarizer.py  document_processor.py  document_summarizer.py  embedding_client.py  enhanced_api_keys.py  event_bus.py  event_service.py  external_service.py  game_service.py  mcp_integration.py  message_bus_client.py  optics_service.py  pgvector_search_service.py  postgresql_file_service.py  rag_orchestrator.py  rag_service.py  resource_cluster_client.py  resource_service.py  summarization_service.py  task_classifier.py  (+6 more)
apps/tenant-backend/tests/: __init__.py  test_access_groups.py  test_agent_service.py  test_assistant_mcp.py  test_assistant_system.py  test_conversation_service.py  test_database_interface.py  test_dataset_sharing.py  test_enhanced_api_keys.py  test_event_automation.py  test_external_service.py  test_observability_time_filters.py  test_rag_service.py  test_user_usage_tracking.py  test_websocket.py
(+429 files in other folders)
